# liger_iris_pipeline

./: .buildinfo  .gitattributes  .gitignore  Makefile  README.md  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup_local_crds.py  setup_local_crds.sh  utils.py
.github/workflows/: build-test.yml  documentation.yml  python-package.yml
_modules/: index.html
_modules/liger_iris_pipeline/: base_step.html
_modules/stdatamodels/: basic_utils.html  dqflags.html
_sources/: index.rst.txt  installation.rst.txt
_sources/api/: api.rst.txt
_sources/calibrations/: calibrations.rst.txt
_sources/datamodels/: dark.rst.txt  datamodels.rst.txt  dq_flags.rst.txt  imager.rst.txt  imager_level1.rst.txt  imager_level2.rst.txt  nonlin.rst.txt
_sources/development/: development.rst.txt
_sources/pipelines/: create_dark.rst.txt  stage1.rst.txt  stage2_imager.rst.txt
_sources/steps/: assign_wcs.rst.txt  background_subtraction_imager.rst.txt  bias.rst.txt  combine_frames.rst.txt  dark_subtraction.rst.txt  detector_artifacts.rst.txt  dq_init.rst.txt  field_distortion.rst.txt  flat_field.rst.txt  flux_calibration.rst.txt  merge_subarrays.rst.txt  nonlinear_correction.rst.txt  normalize.rst.txt  psfr.rst.txt  ramp_fitting.rst.txt  sky_ifs.rst.txt  spectral_extraction.rst.txt  steps.rst.txt  wavecal.rst.txt
_sources/subarrays/: subarrays.rst.txt
api/: api.html
calibrations/: calibrations.html
datamodels/: bias.html  dark.html  data_quality.html  datamodels.html  dq_flags.html  flat.html  ifu_cube.html  ifu_image.html  imager.html  imager_level1.html  imager_level2.html  level0.html  nonlin.html  ramp.html
development/: datamodels.html  development.html  steps_pipelines.html
docs/: available-steps.rst  conf.py  index.rst  rop_pipeline.rst  subarrays.rst
docs/assign_wcs/: main.rst
docs/dark_subtraction/: reference_files.rst
docs/pipeline/: imager_stage2.rst  index.rst
docs/sky_subtraction/: index.rst
docs/source/: conf.py  installation.rst
docs_old/: design.rst
docs_old/api/: liger_iris_pipeline.CreateFlatfield.rst  liger_iris_pipeline.FitRampStep.rst  liger_iris_pipeline.FlatFieldStep.rst  liger_iris_pipeline.FlatModel.rst  liger_iris_pipeline.IFUCubeModel.rst  liger_iris_pipeline.IFUImageModel.rst  liger_iris_pipeline.ImagerStage2Pipeline.rst  liger_iris_pipeline.L0Association.rst  liger_iris_pipeline.L1Association.rst  liger_iris_pipeline.LigerIRISDataModel.rst  liger_iris_pipeline.NonlinCorrectionStep.rst  liger_iris_pipeline.ReferenceFileModel.rst  liger_iris_pipeline.SkySubtractionImagerStep.rst  liger_iris_pipeline.Stage1Pipeline.rst  liger_iris_pipeline.assign_wcs.AssignWCSStep.rst  liger_iris_pipeline.dark_subtraction.DarkSubtractionStep.rst  liger_iris_pipeline.dq_init.DQInitStep.rst  liger_iris_pipeline.flatfield.FlatFieldStep.rst  liger_iris_pipeline.normalize.NormalizeStep.rst  liger_iris_pipeline.open.rst  liger_iris_pipeline.pipeline.ImagerStage2Pipeline.rst
docs_old/dark_subtraction/: index.rst
docs_old/pipeline/: stage1.rst
examples/: demo_imager_binary.html  demo_imager_binary.ipynb  examples.html  liger_imager_m13.html  liger_imager_m13.ipynb
iris_pipeline/tests/: test_rop.py
liger_iris_pipeline/: __init__.py  _version.py  base_step.py  scripts.py
liger_iris_pipeline/assign_wcs/: __init__.py  assign_wcs.py  assign_wcs_step.py
liger_iris_pipeline/associations/: __init__.py  association_base.py  imager_level0.py  imager_level1.py  iris_imager_level0.py  iris_imager_level1.py  level0.py  level1.py  level2.py  subarray.py  utils.py
liger_iris_pipeline/background/: __init__.py  background_step.py  background_sub.py  calc_background_imager_step.py  subtract_background_imager_step.py
liger_iris_pipeline/combine_frames/: __init__.py  combine_frames_step.py
liger_iris_pipeline/dark_current/: dark_current_step.py
liger_iris_pipeline/dark_subtraction/: __init__.py  dark_step.py  dark_sub.py
liger_iris_pipeline/datamodels/: __init__.py  _container_dev.py  bias.py  container.py  container_old.py  dark.py  dq.py  dqflags.py  flat.py  ifu.py  imager.py  integration.py  library.py  library_dev.py  model_base.py  nonlin.py  nonlin_readout_params.py  ramp.py  referencefile.py  util.py  utils.py
liger_iris_pipeline/dq_init/: dq_init_step.py
liger_iris_pipeline/flat_field/: flat_field.py  flat_field_step.py
liger_iris_pipeline/flatfield/: flat_field.py  (+1 more)
pipelines/: create_dark.html  create_flatfield.html  pipelines.html  stage1.html  stage2_imager.html
steps/: assign_wcs.html  background_subtraction_imager.html  bias.html  bias_subtraction.html  combine_frames.html  cube_assembly.html  dark_subtraction.html  detector_artifacts.html  dq_init.html  field_distortion.html  flat_field.html  flux_calibration.html  merge_subarrays.html  mosaic.html  nonlinear_correction.html  normalize.html  parse_subarrays.html  psfr.html  ramp_fitting.html  rectmat.html  residual_adc.html  sky_ifs.html  sky_imager.html  spectral_extraction.html  steps.html  tellurics.html  wavecal.html
subarrays/: subarrays.html
(+503 files in other folders)
